<resources>
    <string name="app_name">RNEWS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share News</string>
    <string name="snackbar_undo">Undo</string>
    <string name="successfully_deleted_message">Successfully deleted!</string>
    <string name="home_toolbar">Top News</string>
    <string name="category">Discover</string>
    <string name="hot_news">HOT NEWS</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="sport">SPORT</string>
    <string name="finance">FINANCE</string>
    <string name="science">SCIENCE</string>
    <string name="cinema">CİNEMA&amp;TV</string>
    <string name="life">LIFE</string>
    <string name="game">GAME</string>
    <string name="politics">POLITICS</string>
    <string name="fashion">FASHION&amp;BEAUTY</string>
    <string name="culture">CULTURE&amp;ART</string>
    <string name="news_detail">News Detail</string>
    <string name="save_toolbar">Favorite News</string>
    <string name="search_toolbar">Search News</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="leave_feedback">Leave feedback !</string>
    <string name="leave_feedback2">Let us know how you like the app!</string>
    <string name="themes">Switch Themes</string>
    <string name="language">Language</string>
    <string name="language2">You can change the application language from the device settings.</string>
    <string name="faq">FAQ</string>
    <string name="agreement">Agreement</string>
    <string name="data_privacy">Data Privacy Terms</string>
    <string name="terms">Terms and Conditions</string>
    <string name="sign_out">Sign Out</string>
    <string name="client_id">YOUR_CLIEND_ID</string>


</resources>